# highfiveback

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  deploy.yml  docker-compose.yml  json.json  pyproject.toml  templates.json
front/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json
front/src/: App.tsx  index.css  main.tsx
front/src/components/ui/: MaterialIcon.jsx
front/src/config/: api.config.ts
front/src/providers/AuthProvider/: auth.types.ts
front/src/utils/: collectAnswers.ts  getCurrentDate.ts  getDateOnly.ts  getDiffTime.ts  getRightDate.ts
reestr/registry_factory/: manage.py  python312requirements.txt  requirements.txt
reestr/registry_factory/chats/: filters.py  models.py  serializers.py  spectacular.py  views.py
reestr/registry_factory/links/: filters.py  models.py  serializers.py  spectacular.py  views.py
reestr/registry_factory/registry_config/: apps.py
reestr/registry_factory/registry_factory/: asgi.py  metadata.py  routers.py  settings.py  urls.py  views.py  wsgi.py
requirements/: base.txt
src/: config.py  database.py  main.py
src/answer/: router.py  schemas.py  service.py
src/chat/: router.py  schemas.py
src/company/: router.py  schemas.py
src/first_init/: __init__.py  init_template.py
src/poll/: router.py  schemas.py
src/question/: schemas.py
src/registry/: crud.py  schemas.py  service_data.py
src/result/: router.py  schemas.py
src/template/: router.py  schemas.py
src/user/: model.py  router.py  schemas.py
src/user_information/: router.py  schemas.py
(+101 files in other folders)
